	  a post attribute being lost in the case where the output buffer was completely
	  full after writing an attribute value, and more attributes needed to be encoded.
	  Reported by Adrian Smith.
	* Fix leak with unknown attributes in detail reader.  Fixes #3937.
	* Fix parenting issues in rlm_yubikey.  Fixes #4012.
	* Update Mongo examples to be correct.

FreeRADIUS 3.0.21 Tue 24 Mar 2020 12:00:00 EDT urgency=low
	Feature improvements
	* New stored procedure for allocating IPs with PostgreSQL.
	  Rates of 1500 IPs per second are now possible.
	  See raddb/mods-config/sql/ippool/postgresql/procedure.sql
	  Patch from Terry Burton.
	* Add SQL IP pool support for Microsoft SQL Server
	  See raddb/mods-config/sql/ippool/mssql/
	  Patch from Terry Burton.
	* Added RCNTEC dictionary. Closes #3168.
	* Added Pica8 dictionary. Closes #3179.
	* Add TLS-Client-Cert-Valid-Since attribute holding notBefore date.
	  Patch from Boris Lytochkin.  Fixes #3157.
	* Generate attributes containing unknown OIDs.
	  See raddb/sites-available/tls.  Patch from Boris Lytochkin.
	* Update the WiMAX dictionary.
	* Added ability to rlm_python(Python2) show a stacktrace from errors. #2979
	* Add WiFi Alliance Policy OIDs.  See raddb/certs/xpextensions
	  Patch from Stefan Winter.
	* radmin now shows coa stats, too.
	* Sample schema extensions for summarizing data in SQL.
	  See mods-config/sql/main/*/process-radacct.sql
	  Many patches from Terry Burton.
	* Update dictionary.aerohive, dictionary.fortinet,
	  dictionary.arista and dictionary.erx
	* Added VAS Experts dictionary.
	* Many updates to RPM and jenkins builds from Matthew Newton
	* Added %C (time now in seconds) and %c (microsecond component of now)
	  back-ported from the "master" branch.
	* Add reload capability to systemd unit file in Debian and RedHat.
	* Increase timestamp precision in postauth to maximum supported by each
	  database and simplify (and make more consistent between drivers) the