@@ -1,7 +1,0 @@
-#
-#  Clean image to test packages in
-#
-FROM debian:jessie
-RUN apt-get update && \
-    apt-get -y dist-upgrade && \
-    apt-get -y install procps
